--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ plugins {
     id 'com.jfrog.bintray' version '1.8.4'
     id 'com.github.ben-manes.versions' version '0.27.0'
     id 'java-library'
-    id 'maven'
     id 'maven-publish'
     id 'net.ltgt.apt' version '0.21'
 }
@@ -44,6 +43,7 @@ compileTestJava {
 }
 
 repositories {
+    mavenCentral()
     jcenter()
 }
 
@@ -136,16 +136,21 @@ bintray {
 }
 
 ext {
-    lombokVersion = '1.18.8'
-    springCloudVersion = 'Greenwich.SR2'
+    commonsCollections4 = '4.1'
+    commonsLang3 = '3.11'
     feignVersion = '10.2.3'
     feignFormVersion = '3.5.0'
-    springfoxSwagger = '2.9.2'
-    commonsCollections4 = '4.1'
-    commonsLang3 = '3.9'
-    springVersion = '2.1.14.RELEASE'
-    mapstruct = '1.2.0.Final'
+    hamcrest = '2.2'
     jsonPathAssert = '2.2.0'
+    jacksonDatabind = '2.12.0'
+    junit = '5.7.0'
+    lombokVersion = '1.18.16'
+    mapstruct = '1.2.0.Final'
+    springCloudVersion = 'Greenwich.SR2'
+    springfoxSwagger = '2.9.2'
+    springVersion = '2.1.14.RELEASE'
+    wiremock = '2.24.1'
+    wiremockJunit5 = '1.3.0'
 }
 
 ext["spring-cloud-openfeign.version"] = "2.1.2.RELEASE"
@@ -165,29 +170,32 @@ dependencies {
     compileOnly group: 'org.projectlombok', name: 'lombok', version: lombokVersion
     annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
 
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.5.1'
-    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.5.1'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junit
+    testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: junit
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-migrationsupport', version: junit
+    testImplementation group: 'org.hamcrest', name: 'hamcrest-core', version: hamcrest
+    testImplementation group: 'org.hamcrest', name: 'hamcrest-library', version: hamcrest
 
     testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springVersion
 
-    testImplementation 'ru.lanwen.wiremock:wiremock-junit5:1.3.0'
+    testImplementation group: 'ru.lanwen.wiremock', name: 'wiremock-junit5', version: wiremockJunit5
 
-    testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: '2.24.1'
+    testImplementation group: 'com.github.tomakehurst', name: 'wiremock', version: wiremock
     testImplementation group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock'
-    testCompile group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
-    testCompile group: 'com.jayway.jsonpath', name: 'json-path-assert', version: jsonPathAssert
+    testImplementation group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
+    testImplementation group: 'com.jayway.jsonpath', name: 'json-path-assert', version: jsonPathAssert
 
-    compile group: 'com.deliveredtechnologies', name: 'rulebook-core', version: '0.9.1'
-    compile group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'
-    compile(group: 'io.springfox', name: 'springfox-swagger2', version: springfoxSwagger)
-    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: springfoxSwagger
-    compile group: 'org.apache.commons', name: 'commons-collections4', version: commonsCollections4
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: commonsLang3
+    implementation group: 'com.deliveredtechnologies', name: 'rulebook-core', version: '0.9.1'
+    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'
+    implementation(group: 'io.springfox', name: 'springfox-swagger2', version: springfoxSwagger)
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: springfoxSwagger
+    implementation group: 'org.apache.commons', name: 'commons-collections4', version: commonsCollections4
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: commonsLang3
 
+    compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonDatabind
     compileOnly group: 'org.mapstruct', name: 'mapstruct-processor', version: mapstruct
     annotationProcessor("org.mapstruct:mapstruct-processor:${mapstruct}")
     implementation group: 'org.mapstruct', name: 'mapstruct-jdk8', version: mapstruct
-
 }
 
 wrapper {
