--- a/build.gradle
+++ b/build.gradle
@@ -140,15 +140,17 @@ ext {
     commonsLang3 = '3.11'
     feignVersion = '10.2.3'
     feignFormVersion = '3.5.0'
+    guavaVersion = '30.1-jre'
     hamcrest = '2.2'
     jsonPathAssert = '2.2.0'
     jacksonDatabind = '2.12.0'
+    javaxValidationVersion = '2.0.0.Final'
     junit = '5.7.0'
     lombokVersion = '1.18.16'
     mapstruct = '1.2.0.Final'
     springCloudVersion = 'Greenwich.SR2'
-    springfoxSwagger = '2.9.2'
     springVersion = '2.1.14.RELEASE'
+    swaggerVersion = '1.5.20'
     wiremock = '2.24.1'
     wiremockJunit5 = '1.3.0'
 }
@@ -186,10 +188,11 @@ dependencies {
     testImplementation group: 'com.jayway.jsonpath', name: 'json-path-assert', version: jsonPathAssert
 
     implementation group: 'com.deliveredtechnologies', name: 'rulebook-core', version: '0.9.1'
-    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.0.Final'
-    implementation(group: 'io.springfox', name: 'springfox-swagger2', version: springfoxSwagger)
+    implementation group: 'javax.validation', name: 'validation-api', version: javaxValidationVersion
+    implementation group: 'io.swagger', name: 'swagger-annotations', version: swaggerVersion
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: commonsCollections4
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: commonsLang3
+    implementation group: 'com.google.guava', name: 'guava', version: guavaVersion
 
     compileOnly group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: jacksonDatabind
     compileOnly group: 'org.mapstruct', name: 'mapstruct-processor', version: mapstruct
