--- a/build.gradle
+++ b/build.gradle
@@ -187,6 +187,7 @@ dependencies {
     testImplementation group: 'org.projectlombok', name: 'lombok', version: '1.16.16'
     testImplementation group: 'com.jayway.jsonpath', name: 'json-path-assert', version: jsonPathAssert
 
+    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.4'
     implementation group: 'com.deliveredtechnologies', name: 'rulebook-core', version: '0.9.1'
     implementation group: 'javax.validation', name: 'validation-api', version: javaxValidationVersion
     implementation group: 'io.swagger', name: 'swagger-annotations', version: swaggerVersion
